--- a/source/index.html
+++ b/source/index.html
@@ -43,8 +43,7 @@
     <div class="intro">
       <div class="intro__wrapper">
         <div class="intro__image">
-          <img class="intro__slogan" src="img/intro-slogan.svg" width="282" height="214"
-            alt="Добро пожаловать в Седону">
+          <img class="intro__slogan" src="img/intro-slogan.svg" width="282" height="214" alt="Добро пожаловать в Седону">
         </div>
         <div class="intro__text-block">
           <p class="intro__title">СЕДОНА — небольшой городок в АРИЗОНЕ, заслуживающий большего!</p>
@@ -64,7 +63,11 @@
             </div>
             <div class="advantage__image-wrapper">
               <picture>
+                <source type="image/webp" media="(min-width: 1200px)" srcset="img/advanteges/photo-city-desktop.webp 1x, img/advanteges/photo-city-desktop.webp 2x">
+                <source type="image/webp" media="(min-width: 768px)" srcset="img/advanteges/photo-city-tablet.webp 1x, img/advanteges/photo-city-tablet@2x.webp 2x">
+                <source type="image/webp" srcset="img/advanteges/photo-city.webp 1x, img/advanteges/photo-city@2x.webp 2x">
                 <source media="(min-width: 1200px)" srcset="img/advanteges/photo-city-desktop.jpg 1x, img/advanteges/photo-city-desktop@2x.jpg 2x">
+                <source media="(min-width: 768px)" srcset="img/advanteges/photo-city-tablet.jpg 1x, img/advanteges/photo-city-tablet@2x.jpg 2x">
                 <img class="advantage__image" src="img/advanteges/photo-city.jpg" srcset="img/advanteges/photo-city@2x.jpg 2x" alt="Вид на город Седона." width="320" height="260">
               </picture>
             </div>
@@ -95,7 +98,11 @@
             </div>
             <div class="advantage__image-wrapper">
               <picture>
+                <source type="image/webp" media="(min-width: 1200px)" srcset="img/advanteges/photo-bridge-desktop.webp 1x, img/advanteges/photo-bridge-desktop.webp 2x">
+                <source type="image/webp" media="(min-width: 768px)" srcset="img/advanteges/photo-bridge-tablet.webp 1x, img/advanteges/photo-bridge-tablet@2x.webp 2x">
+                <source type="image/webp" srcset="img/advanteges/photo-bridge.webp 1x, img/advanteges/photo-bridge@2x.webp 2x">
                 <source media="(min-width: 1200px)" srcset="img/advanteges/photo-bridge-desktop.jpg 1x, img/advanteges/photo-bridge-desktop@2x.jpg 2x">
+                <source media="(min-width: 768px)" srcset="img/advanteges/photo-bridge-tablet.jpg 1x, img/advanteges/photo-bridge-tablet@2x.jpg 2x">
                 <img class="advantage__image" src="img/advanteges/photo-bridge.jpg" srcset="img/advanteges/photo-bridge@2x.jpg 2x" alt="Вид на мост Дьявол." width="320" height="260">
               </picture>
             </div>
@@ -147,6 +154,7 @@
           referrerpolicy="no-referrer-when-downgrade"
           title="Карта города Седона"></iframe>
         </div>
+      </div>
     </section>
   </main>
   <footer class="main-footer">
@@ -155,47 +163,25 @@
       <div class="main-footer__social social">
         <ul class="social__list">
           <li class="social__item">
-            <a class="social__link" href="https://vk.com/htmlacademy" target="_blank"><span class="visually-hidden">VK</span>
-              <svg aria-hidden="true" focusable="false" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <g clip-path="url(#clip0_62253_971)">
-                  <path fill-rule="evenodd" clip-rule="evenodd" d="M23.45 5.948C23.616 5.402 23.45 5 22.655 5H20.03C19.362 5 19.054 5.347 18.887 5.73C18.887 5.73 17.552 8.926 15.661 11.002C15.049 11.604 14.771 11.795 14.437 11.795C14.27 11.795 14.019 11.604 14.019 11.057V5.948C14.019 5.292 13.835 5 13.279 5H9.151C8.734 5 8.483 5.304 8.483 5.593C8.483 6.214 9.429 6.358 9.526 8.106V11.904C9.526 12.737 9.373 12.888 9.039 12.888C8.149 12.888 5.984 9.677 4.699 6.003C4.45 5.288 4.198 5 3.527 5H0.9C0.15 5 0 5.347 0 5.73C0 6.412 0.89 9.8 4.145 14.281C6.315 17.341 9.37 19 12.153 19C13.822 19 14.028 18.632 14.028 17.997V15.684C14.028 14.947 14.186 14.8 14.715 14.8C15.105 14.8 15.772 14.992 17.33 16.467C19.11 18.216 19.403 19 20.405 19H23.03C23.78 19 24.156 18.632 23.94 17.904C23.702 17.18 22.852 16.129 21.725 14.882C21.113 14.172 20.195 13.407 19.916 13.024C19.527 12.533 19.638 12.314 19.916 11.877C19.916 11.877 23.116 7.451 23.449 5.948H23.45Z" fill="white"/>
-                </g>
-                <defs>
-                  <clipPath id="clip0_62253_971">
-                    <rect width="24" height="24" fill="white"/>
-                  </clipPath>
-                </defs>
-              </svg>
-            </a>
+            <a class="social__link social__link--vk" href="https://vk.com/htmlacademy" target="_blank"><span class="visually-hidden">VK</span></a>
           </li>
           <li class="social__item">
-            <a class="social__link" href="https://t.me/htmlacademy" target="_blank"><span class="visually-hidden">Telegram</span>
-              <svg aria-hidden="true" focusable="false" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M22.4393 4.62225L19.2705 19.566C19.0313 20.6205 18.408 20.883 17.5223 20.3865L12.6938 16.8285L10.3643 19.0695C10.1063 19.3275 9.891 19.5428 9.39375 19.5428L9.741 14.6258L18.6893 6.54C19.0785 6.1935 18.6045 6.00075 18.0848 6.348L7.02225 13.314L2.25976 11.823C1.22401 11.4998 1.20526 10.7873 2.47576 10.29L21.1035 3.11325C21.966 2.79 22.7205 3.30525 22.4393 4.623V4.62225Z" fill="white"/>
-              </svg>
-            </a>
+            <a class="social__link social__link--telegram" href="https://t.me/htmlacademy" target="_blank"><span class="visually-hidden">Telegram</span></a>
           </li>
           <li class="social__item">
-            <a class="social__link" href="https://www.youtube.com/user/htmlacademyru" target="_blank"><span class="visually-hidden">Youtube</span>
-              <svg aria-hidden="true" focusable="false" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M19.1813 5H4.81331C3.30618 5 2 6.3 2 7.8V16.1C2 17.7 3.30618 19 4.81331 19H19.1813C20.7889 19 21.9946 17.7 21.9946 16.2V7.8C22.095 6.3 20.7889 5 19.1813 5ZM9.03326 15.4V8.6L15.8656 12L9.03326 15.4Z" fill="white"/>
-              </svg>
-            </a>
+            <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru" target="_blank"><span class="visually-hidden">Youtube</span></a>
           </li>
         </ul>
       </div>
-      <a class="main-footer__copyright" href="https://htmlacademy.ru/" target="_blank">
+      <a class="main-footer__copyright" href="https://htmlacademy.ru/intensive/adaptive" target="_blank">
         <span class="main-footer__copyright-text">Разработано</span>
-        <svg class="main-footer__copyright-logo" aria-hidden="true" focusable="false"  width="27" height="35" viewBox="0 0 27 35" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path
-            d="M13.65 0.449951H13.55L0.0500031 1.84995V26.55L13.55 34.5499L26.95 26.55V1.84995L13.65 0.449951ZM25.05 12.55L13.55 5.74995V5.64995H13.45L13.35 5.54995V5.64995L1.95 12.55V3.54995L13.45 2.34995L25.05 3.54995V12.55ZM13.45 7.24995L24.95 13.95L20.45 16.55L13.35 12.35V13.75L19.25 17.25L18.35 17.75L13.35 14.75V16.15L17.15 18.45L16.35 18.95L13.35 17.15V18.55L15.25 19.65L13.45 20.75L2.05 14.05L13.45 7.24995ZM1.95 15.55L13.35 22.35V23.35L5.45 18.65V20.05L13.45 24.85V25.95L5.45 21.25V22.65L13.45 27.45L21.55 22.55V17.35L24.95 15.35V25.35L13.45 32.25L1.95 25.45V15.55Z"
-            fill="black" />
+        <svg class="main-footer__copyright-logo" aria-label="Сайт HTML Academy" width="27" height="35">
+          <use xlink:href="img/sprite.svg#copyright-logo"></use>
         </svg>
       </a>
     </div>
   </footer>
   <script src="js/mobile-menu.js"></script>
   <script src="js/map.js"></script>
-  <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU"></script>
 </body>
 </html>
